--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -3,7 +3,12 @@
 <% else %>
 <tr>
 <% end %>
+<% if I18n.locale == :en %>
 <td><%= line_item.quantity %> &times;</td>
 <td><%= line_item.product.title %></td>
+<% else %>
+<td><%= line_item.quantity %> &times;</td>
+<td><%= line_item.product.title_ru %></td>
+<% end %>
 <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
 </tr>
