--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,4 +3,4 @@
 <%= render @cart %>
 
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Back', products_path %>
