I18n translations and order/cart fix

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-<h1>New Order</h1>
+<h1><%= t('.title') %></h1>
 <div class="depot_form">
 	<fieldset>
 		<legend><%= t('.legend') %></legend>
