--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :address, t('.address_html') %>
+    <%= form.label :address, t('.address') %>
     <%= form.text_area :address, rows: 3, cold: 40 %>
   </div>
 
