--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,8 +8,7 @@
       <th>Name</th>
       <th>Address</th>
       <th>Email</th>
-      <th> pay type</th>
-      <th>Integer</th>
+      <th>Pay type</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,8 +19,7 @@
         <td><%= order.name %></td>
         <td><%= order.address %></td>
         <td><%= order.email %></td>
-        <td><%= order. pay_type %></td>
-        <td><%= order.integer %></td>
+        <td><%= order.pay_type %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
