order and order mailer fixes

--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -2,4 +2,12 @@
 
 <p>
   Hello, we received your order and will get back to you soon with production and shipping details.
+
+
+Dear <%= @order.name %>
+Thank you for your recent order at Rkraftcomua.
+You ordered the following items:
+<%= render @order.line_items -%>
+
+We will send you a separate email when your order ships.
 </p>
