order I18n fix and form

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -5,10 +5,10 @@
 
 .order_form {
 fieldset {
-background: #efe;
+background: #ced4da;
 legend {
 color: #dfd;
-background: #141;
+background: #c27baa;
 font-family: sans-serif;
 padding: 0.2em 1em;
 }
