--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,8 +9,10 @@
 <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 </tr>
 </table>
- <%= button_to t('.checkout'), new_order_path, method: :get %>
+ <%= link_to t('.checkout'), new_order_path, method: :get, locale: I18n.locale %>
  <%= button_to t('.empty'), cart, method: :delete,
 data: { confirm: 'Are you sure?' } %>
 
 <% end %>
+
+
