--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :address, t('.address') %>
-    <%= form.text_area :address, rows: 3, cold: 40 %>
+    <%= form.text_area :address, rows: 3, cols: 40 %>
   </div>
 
   <div class="field">
