--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,10 +1,10 @@
 <div class="center jumbotron">
 <h1><%= t('.title') %></h1>
-<div class="depot_form">
+<div class="order_form">
 	<fieldset>
 		<legend><%= t('.legend') %></legend>
 		<%= render 'form', order: @order %>
     </fieldset>
 </div>
 
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Back', products_path %>
