--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -1,13 +1,12 @@
 <h1>Your order received!</h1>
 
-<p>
-  Hello, we received your order and will get back to you soon with production and shipping details.
+<p><%= t('.title') %>
+ 
 
 
 Dear <%= @order.name %>
-Thank you for your recent order at Rkraftcomua.
-You ordered the following items:
+<%= t('.thank') %>
 <%= render @order.line_items -%>
 
-We will send you a separate email when your order ships.
+<%= t('.separate') %>
 </p>
